--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ main>div {
     position: relative;
     border-radius: 0.5em;
     overflow: hidden;
+    cursor: pointer;
 }
 
 div img {
@@ -86,6 +87,7 @@ h1 {
     font-weight: var(--fw-bold);
     color: var(--white);
     padding: 0.85em 0;
+    cursor: pointer;
 }
 
 h1:hover {
@@ -144,6 +146,7 @@ hr {
 
 span {
     color: var(--white);
+    cursor: pointer;
 }
 
 span:hover {
